--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ n++;
 },1000);
 setTimeout(inicio,10000);
 function inicio() {
-window.location="AQUII PONES EL LINK DE LA PRIMER PAGINA, YA TU SABE PARA Q TE REGRESE DESPUES DE LOS 10S";
+window.location="https://belcantopedraza.github.io/INISIO-DE-SESION/";
 }
 </script>
 </html>
