--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ n++;
 },1000);
 setTimeout(inicio,10000);
 function inicio() {
-window.location="https://belcantopedraza.github.io/INISIO-DE-SESION/";
+window.location="https://belcantopedraza.github.io/INICIO-DE-SESION/";
 }
 </script>
 </html>
